# pHashPlus

./: .clang-format  CMakeLists.txt  README.md
examples/: CMakeLists.txt  imagehash-test-cimg-multipthread.cpp  imagehash-test-cimg-no-blur.cpp  imagehash-test-cimg.cpp  imagehash-test-file.cpp  test_mvptree_dct.cpp  test_mvptree_dct2.cpp
ext/: fastest_blur.cpp  pHash_ext.cpp  pHash_ext.h  pHash_mvp.cpp  pHash_mvp.h
src/: audiophash.cpp  bmbhash.cpp  bmbhash.h  pHash.cpp  pHash.h
src/win/: pHash.cpp  pHash.h
tests/: imagehash-test-cimg-multipthread.cpp  imagehash-test-cimg-no-blur.cpp  imagehash-test-cimg.cpp  imagehash-test-file.cpp
